--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@
 :root {
   --text-color: #2d334a;
   --background: #fcc2d7;
+  /* --animate-delay: 0.5s; */
+  /* --animate-duration: 800ms;
+  --animate-delay: 0.9s; */
 }
 body {
   background-color: var(--background);
@@ -137,21 +140,21 @@ h3 {
 }
 
 .about-photo {
-  height: 104%;
-  width: 50%;
+  height: 20rem;
+  width: 15rem;
   border: 9px solid #fff;
 }
 
 p {
   letter-spacing: 1px;
   word-spacing: 2px;
-  margin-bottom: 1rem;
+  /* margin-bottom: 1rem; */
 }
 
 h2 {
   font-size: 4.2rem;
-  letter-spacing: 1px;
-  word-spacing: 1px;
+  letter-spacing: 2px;
+  word-spacing: 5px;
   font-weight: 500;
   margin-bottom: 2rem;
 }
@@ -183,4 +186,56 @@ h4 {
   font-weight: 500;
   letter-spacing: 1px;
   word-spacing: 2px;
+}
+
+h5 {
+  margin-bottom: 5rem;
+  margin-top: 6rem;
+  letter-spacing: 1px;
+  word-spacing: 1px;
+}
+
+.selected-works-flex {
+  display: flex;
+  gap: 5rem;
+  align-items: center;
+  margin-bottom: 5rem;
+}
+
+.selected-title {
+  font-size: 3rem;
+  font-weight: 500;
+}
+
+.about-me-first {
+  margin-bottom: 1rem;
+}
+
+.all-projects {
+  font-size: 1rem;
+  text-decoration: none;
+  color: var(--text-color);
+  border-bottom: 1px solid var(--text-color);
+}
+
+.get-in-touch {
+  border: 2px solid var(--text-color);
+  color: var(--text-color);
+  padding: 0.8rem 2rem;
+  text-transform: capitalize;
+  text-decoration: none;
+  font-size: 1.5rem;
+}
+
+.get-in-touch:hover {
+  background-color: var(--text-color);
+  color: #fff;
+}
+
+.get-in-touch-box {
+  padding: 5rem 0 10rem 0;
+}
+
+.get-in-touch-content {
+  margin-bottom: 3rem;
 }
