--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,6 @@
 :root {
   --text-color: #2d334a;
   --background: #fcc2d7;
-  /* --animate-delay: 0.5s; */
-  /* --animate-duration: 800ms;
-  --animate-delay: 0.9s; */
 }
 body {
   background-color: var(--background);
@@ -101,6 +98,9 @@ h3 {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 3rem;
+  letter-spacing: 1px;
+  font-weight: 500;
+  font-size: 0.9rem;
 }
 
 .contact-container {
@@ -108,27 +108,9 @@ h3 {
   height: 79vh;
 }
 
-/* .section-footer {
-  height: 100%;
-} */
-
-.footer-nav-lists {
-  text-decoration: none;
-  display: flex;
-  gap: 1.8rem;
-}
-
 .footer-nav-list {
   text-decoration: none;
   color: var(--text-color);
-  font-size: 0.9rem;
-  font-weight: 500;
-  letter-spacing: 1px;
-  padding-bottom: 3rem;
-}
-
-.rights {
-  padding-bottom: 3rem;
 }
 
 .about-box {
@@ -148,7 +130,6 @@ h3 {
 p {
   letter-spacing: 1px;
   word-spacing: 2px;
-  /* margin-bottom: 1rem; */
 }
 
 h2 {
@@ -172,7 +153,7 @@ h2 {
 
 .project-image {
   height: 22rem;
-  width: 16.67rem;
+  width: 16.61rem;
   transition: all 0.9s;
   cursor: pointer;
 }
@@ -205,6 +186,8 @@ h5 {
 .selected-title {
   font-size: 3rem;
   font-weight: 500;
+  text-decoration: none;
+  color: var(--text-color);
 }
 
 .about-me-first {
@@ -238,4 +221,48 @@ h5 {
 
 .get-in-touch-content {
   margin-bottom: 3rem;
+}
+
+.single-work {
+  text-decoration: none;
+  color: var(--text-color);
+}
+
+/* .single-work:active {
+  transform: scale(1.2);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+} */
+
+.single-grid {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 2rem;
+}
+
+.main-project-image {
+  height: 32rem;
+  width: 28rem;
+}
+
+.sample1 {
+  height: 22rem;
+  width: 22rem;
+}
+
+.sample2 {
+  height: 25rem;
+  width: 28rem;
+}
+
+.sample3 {
+  height: 22rem;
+  width: 18rem;
+}
+
+.single-work-content {
+  padding: 8rem 0 9rem 0;
+}
+
+.about-para p {
+  line-height: 1.4;
 }
