--- a/src/index.css
+++ b/src/index.css
@@ -111,8 +111,8 @@ h3 {
 }
 
 .contact-container {
-  padding: 8rem 0 9rem 0;
-  height: 79vh;
+  padding: 8rem 0 9.6rem 0;
+  /* height: 79vh; */
 }
 
 .footer-nav-list {
@@ -123,7 +123,7 @@ h3 {
 .about-box {
   display: flex;
   gap: 10rem;
-  padding: 8rem 0 7.95rem 0;
+  padding: 8rem 0 4.2rem 0;
   /* height: 79vh; */
   align-items: center;
 }
